Add nvim-jdtls sample configuration